--- a/src/main/webapp/book/form.xhtml
+++ b/src/main/webapp/book/form.xhtml
@@ -31,6 +31,16 @@
 				<h:inputText value="#{adminBooksBean.book.price}" />
 			</div>
 			
+			<div>
+				<label>Autores</label>
+				<h:selectManyCheckbox value="#{adminBooksBean.selectedAuthorsIds}"
+					converter="javax.faces.Integer">
+					<f:selectItems value="#{adminBooksBean.authors}" var="author"
+						itemLabel="#{author.name}" itemValue="#{author.id}" />
+				</h:selectManyCheckbox>
+			</div>
+			
+			
 			<h:commandButton value="Salvar" action="#{adminBooksBean.save()}" />
 		</h:form>
 	</h:body>
