--- a/src/main/webapp/books/form.xhtml
+++ b/src/main/webapp/books/form.xhtml
@@ -10,31 +10,33 @@
 	</h:head>
 	
 	<h:body>
-		<h:form>
+		<h:form prependId="false">
+			<h:messages />
+		
 			<div>
-				<label>Título</label>
-				<h:inputText value="#{adminBooksBean.book.title}" />
+				<label for="titulo">Título</label>
+				<h:inputText id="titulo" value="#{adminBooksBean.book.title}"
+					/>
 			</div>
 			
 			<div>
-				<label>Descricão</label>
-				<h:inputTextarea value="#{adminBooksBean.book.description}" />
+				<label for="descricao">Descricão</label>
+				<h:inputTextarea id="descricao" value="#{adminBooksBean.book.description}"  />
 			</div>
 			
 			<div>
-				<label>Número de páginas</label>
-				<h:inputText value="#{adminBooksBean.book.numberOfPages}" />
+				<label for="pages">Número de páginas</label>
+				<h:inputText id="pages" value="#{adminBooksBean.book.numberOfPages}" />
 			</div>
 			
 			<div>
-				<label>Preço</label>
-				<h:inputText value="#{adminBooksBean.book.price}" />
+				<label for="preco">Preço</label>
+				<h:inputText id="preco" value="#{adminBooksBean.book.price}" />
 			</div>
 			
 			<div>
 				<label>Autores</label>
-				<h:selectManyCheckbox value="#{adminBooksBean.selectedAuthorsIds}"
-					converter="javax.faces.Integer">
+				<h:selectManyCheckbox value="#{adminBooksBean.selectedAuthorsIds}" converter="javax.faces.Integer">
 					<f:selectItems value="#{adminBooksBean.authors}" var="author"
 						itemLabel="#{author.name}" itemValue="#{author.id}" />
 				</h:selectManyCheckbox>
