--- a/src/main/webapp/books/form.xhtml
+++ b/src/main/webapp/books/form.xhtml
@@ -11,7 +11,7 @@
 	</h:head>
 	
 	<h:body>
-		<h:form prependId="false">
+		<h:form prependId="false" enctype="multipart/form-data">
 			<h:messages />
 		
 			<div>
@@ -44,6 +44,11 @@
 				<h:inputText id="dataLancamento" value="#{adminBooksBean.book.releaseDate}" pt:type="date">
 					<f:convertDateTime pattern="yyyy-MM-dd" />
 				</h:inputText>
+			</div>
+			
+			<div>
+				<label for="capa">Capa do livro</label>
+				<h:inputFile id="capa" value="#{adminBooksBean.cover}" label="Capa do livro" />
 			</div>
 			
 			<div>
