Adicionando items ao carrinho de compras

--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -451,7 +451,7 @@
 			<a tabindex="3" href="/cart" title="Ir para sacola de compras" class="sacola cabecalhoPrincipal-itemNavegacao">
 				<svg width="60px" height="24px" viewBox="0 0 60 24" role="img" aria-labelledby="sacolaLabel" class="sacola-icone">
 					<title id="sacolaLabel">
-						Você tem 0 itens na sacola
+						Você tem #{shoppingCart.quantity} itens na sacola
 					</title>
 					<g fill="none" fill-rule="evenodd" stroke="#FBFAF9" stroke-linecap="square" stroke-width="2">
 						<path d="m47.550692,23l-18,0l0,-17l18,0l0,17z"/>
@@ -459,7 +459,7 @@
 					</g>
 					<g>
 						<circle cy="14.681157" cx="13.148581" r="9" role="presentation" fill="#FFF"/>
-						<text text-decoration="none" text-anchor="middle" x="13.148581" y="19" class="sacola-contador">0</text>
+						<text text-decoration="none" text-anchor="middle" x="13.148581" y="19" class="sacola-contador">#{shoppingCart.quantity}</text>
 					</g>
 				 </svg>
 			</a>
