--- a/src/main/webapp/books/details.xhtml
+++ b/src/main/webapp/books/details.xhtml
@@ -3,7 +3,8 @@
 	  xmlns:h="http://xmlns.jcp.org/jsf/html"
 	  xmlns:f="http://xmlns.jcp.org/jsf/core"
 	  xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	  xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
+	  xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
+	  xmlns:jsf="http://xmlns.jcp.org/jsf">
 	  
 	<f:metadata>
 	  	<f:viewParam name="id" value="#{bookDetailsBean.id}" />
@@ -554,35 +555,29 @@
 		</header>
 
 
-		<form action="/casadocodigo/cart/add" method="POST" class="adicionarAoCarrinho">
-			<input type="hidden" name="produtoID" value="${produto.id}" />
-			
+		<form jsf:id="form" method="post" class="adicionarAoCarrinho">
 			<ul class="adicionarAoCarrinho-listaOfertas">
-				
-					<li class="adicionarAoCarrinho-oferta">
-						<label class="adicionarAoCarrinho-infosDaOferta"> 
-							<span class="adicionarAoCarrinho-tipoDaOferta" role="presentation">
-								<span class="adicionarAoCarrinho-tipoDaOferta-nome">#{bookDetailsBean.book.title}</span> 
-								<small class="adicionarAoCarrinho-tipoDaOferta-detalhe">
-									(.pdf, .epub e .mobi) 
-								</small>
+				<li class="adicionarAoCarrinho-oferta">
+					<label class="adicionarAoCarrinho-infosDaOferta"> 
+						<span class="adicionarAoCarrinho-tipoDaOferta" role="presentation">
+							<span class="adicionarAoCarrinho-tipoDaOferta-nome">#{bookDetailsBean.book.title}</span> 
+							<small class="adicionarAoCarrinho-tipoDaOferta-detalhe">(.pdf, .epub e .mobi)</small>
+						</span>
+						<p class="adicionarAoCarrinho-preco">
+							<small class="adicionarAoCarrinho-preco-promocao"> 
+								<del class="adicionarAoCarrinho-preco-promocao-valor">R$ 39,90</del> por
+							</small> 
+							<span class="adicionarAoCarrinho-preco-valor">
+								R$ #{bookDetailsBean.book.price}
 							</span>
-							<p class="adicionarAoCarrinho-preco">
-								<small class="adicionarAoCarrinho-preco-promocao"> 
-									<del class="adicionarAoCarrinho-preco-promocao-valor">R$ 39,90</del> por
-								</small> 
-								<span class="adicionarAoCarrinho-preco-valor">
-									R$ #{bookDetailsBean.book.price}
-								</span>
-							</p>
-						</label>
+						</p>
+					</label>
 
-						<button class="adicionarAoCarrinho-botaoComprar" type="submit" title="Compre agora"
-							name="tipoLivro" value="">
-							Comprar
-						</button>
-					</li>
-				
+					<button jsf:action="#{shoppingCartBean.add(bookDetailsBean.id)}" type="submit"
+						class="adicionarAoCarrinho-botaoComprar" title="Compre agora">
+						Comprar
+					</button>
+				</li>
 			</ul>
 		</form>
 		
