Criando layout da página de cadastro de livros

--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -11,7 +11,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta name="viewport" content="width=device-width" />
 	<link rel="icon" href="//cdn.shopify.com/s/files/1/0155/7645/t/229/assets/favicon.png?6587815016992574778" type="image/png" />
-	<link rel="stylesheet" href="//cdn.shopify.com/s/files/1/0155/7645/t/229/assets/style.css?6587815016992574778" />
+	
+	<link rel="stylesheet" href="/casadocodigo/resources/css/style.css" />
 	
 	<title>Livros de Java, SOA, Android, iPhone, Ruby on Rails e muito mais - Casa do Código</title>
 	
