--- a/src/main/webapp/cart.xhtml
+++ b/src/main/webapp/cart.xhtml
@@ -520,7 +520,7 @@
 					<tfoot class="formularioDoCarrinho-rodape">
 						<tr>
 							<td class="formularioDoCarrinho-rodape-item formularioDoCarrinho-finalizar" colspan="3">
-								<button class="formularioDoCarrinho-finalizar-botao" type="submit" name="checkout">
+								<button jsf:outcome="/checkout" class="formularioDoCarrinho-finalizar-botao" type="button" name="checkout">
 									Finalizar<span class="formularioDoCarrinho-finalizar-botao-texto" role="presentation"> compra</span>
 								</button>
 							</td>
