--- a/src/main/webapp/books/list.xhtml
+++ b/src/main/webapp/books/list.xhtml
@@ -1,30 +1,45 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-	  xmlns:h="http://xmlns.jcp.org/jsf/html"
-	  xmlns:f="http://xmlns.jcp.org/jsf/core"
-	  xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-	  
-	<h:head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<title>Livros</title>
-	</h:head>
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+	  	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	  	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	  	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	 	xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
+	 	xmlns:jsf="http://xmlns.jcp.org/jsf"
+	 	template="/WEB-INF/templates/layout-admin.xhtml">
 	
-	<h:body>
-		<h:messages />
-	
-		<h:dataTable var="book" value="#{adminListBooksBean.books}">
-			<h:column>
-				<f:facet name="header">Título</f:facet>
-				#{book.title}
-			</h:column>
-			<h:column>
-				<f:facet name="header">N° de Páginas</f:facet>
-				#{book.numberOfPages}
-			</h:column>
-			<h:column>
-				<f:facet name="header">Autores</f:facet>
-				#{book.authorsNames}
-			</h:column>
-		</h:dataTable>
-	</h:body>
-</html>
+	<ui:define name="content">
+		<main>
+			<section class="infoSection container">
+				<h2 class="infoSection-titulo">Livros</h2>
+		
+				<h:dataTable var="book" value="#{adminListBooksBean.books}" styleClass="cdc-table">
+					<h:column>
+						<f:facet name="header">Título</f:facet>
+						#{book.title}
+					</h:column>
+					<h:column>
+						<f:facet name="header">Categoria</f:facet>
+						#{book.category.description}
+					</h:column>
+					<h:column>
+						<f:facet name="header">N° de Páginas</f:facet>
+						#{book.numberOfPages}
+					</h:column>
+					<h:column>
+						<f:facet name="header">Preço</f:facet>
+						<h:outputText value="#{book.price}">
+							<f:convertNumber pattern="#,##0.00" />
+						</h:outputText>
+					</h:column>
+					<h:column>
+						<f:facet name="header">Autores</f:facet>
+						#{book.authorsNames}
+					</h:column>
+				</h:dataTable>
+			</section>
+			
+			<div class="button__footer">
+				<a href="#{request.contextPath}/books/form.xhtml">Novo Livro</a>
+			</div>
+		</main>
+	</ui:define>
+</ui:composition>
